--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
 .nav-link{
     color:black;
 }
+.navbar{
+    background: transparent;
+    position: fixed;
+    display: flex;
+    padding-left: 2%;
+    width: 100%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    
+}
+.nav-scrolled{
+    background-color: blue;
+    box-shadow: 0 3px 20px rgba(black, 0.2);
+}
+.intro{
+    padding: 10%;
+    border: solid 1px black;
+    margin: 0.5%;
+    text-align: center;
+    border-radius: 5px;
+    padding-top: 14%;
+    height: 98vh;
+}
+#cons{
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+}
+#cons :is(.bi){
+  width: 50%;
+}
+#intro :is(h2, p){
+    margin-top: auto;
+    margin-bottom: auto;
+}
+@media screen and (max-width: 600px) {
+    .intro{
+        width: 100%;
+        height: 99vh;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 79%;
+    }
+
+}
